--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "js-data": "^2.9.0",
     "minifyify": "^7.3.4",
     "node-sass": "^4.2.0",
-    "rollup": "^0.36.1",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^7.0.0",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-scss": "^0.2.0",
+    "rollup": "2.10.5",
+    "@rollup/plugin-babel": "^5.0.2",
+    "@rollup/plugin-buble": "^0.21.0",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "rollup-plugin-scss": "^2.5.0",
     "rollup-plugin-vue": "5.1.7",
     "uglifyify": "^3.0.4",
     "vue": "2.6.11",
