--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "lodash-es": "^4.17.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@rollup/plugin-babel": "^5.0.2",
+    "@rollup/plugin-buble": "^0.21.0",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "babel-plugin-external-helpers": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.15.0",
@@ -52,10 +57,6 @@
     "minifyify": "^7.3.4",
     "node-sass": "^4.2.0",
     "rollup": "2.10.5",
-    "@rollup/plugin-babel": "^5.0.2",
-    "@rollup/plugin-buble": "^0.21.0",
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
     "rollup-plugin-scss": "^2.5.0",
     "rollup-plugin-vue": "5.1.7",
     "uglifyify": "^3.0.4",
