update rollup config

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "vue-flowchart",
+  "name": "@gcorb/vueflowchart",
   "version": "0.1.1",
   "description": "vue-flowchart",
   "main": "dist/vue-flowchart.js",
   "module": "dist/vue-flowchart.esm.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:umd": "rollup -c --name vueFlowchart --input index.js --output dist/vue-flowchart.js --format umd",
-    "build:es": "rollup -c --name vueFlowchart --input index.js --output dist/vue-flowchart.esm.js --format es",
+    "build:umd": "rollup index.js -c --format umd --name 'vueFlowchart' --file dist/vue-flowchart.js",
+    "build:es": "rollup index.js -c --format es --name 'vueFlowchart' --file dist/vue-flowchart.esm.js",
     "build": "npm run build:umd && npm run build:es",
     "serve": "NODE_PATH=$NODE_PATH:lib:examples/simple budo examples/simple/index.js --open -d . --live -- -t [ vueify ] -g babelify",
     "//dist": "NODE_PATH=$NODE_PATH:examples/simple browserify -e examples/simple/index.js -o dist/index.js -t vueify -t [ babelify ] -t uglifyify -p [ minifyify --no-map ]"
