--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gcorbel_4/vueflowchart",
-  "version": "1.0.3",
+  "version": "1.0.8",
   "description": "vueflowchart",
   "main": "dist/vueflowchart.js",
   "module": "dist/vueflowchart.esm.js",
@@ -33,7 +33,8 @@
     "vue": "2.x"
   },
   "dependencies": {
-    "lodash-es": "^4.17.4"
+    "lodash-es": "^4.17.4",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
